# gitrama-mcp

./: Dockerfile  Dockerfile.txt  LICENSE  README.md  SECURITY.md  ci.yml  pyproject.toml  pytest.ini  railway.toml  requirements.txt  smithery.yaml
.github/workflows/: ci.yml
src/gitrama_mcp/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_gitrama.py
