[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitrama-mcp"
version = "1.3.0"
description = "MCP Server for Gitrama — AI-powered Git intelligence for your IDE"
readme = "README.md"
license = { text = "Business Source License 1.1" }
requires-python = ">=3.10"
authors = [
    { name = "Gitrama LLC", email = "contact@gitrama.ai" },
]
keywords = ["mcp", "git", "ai", "commit", "gitrama", "cursor", "claude", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.2.0",
    "gitrama>=1.3.0",
]

[project.urls]
Homepage = "https://gitrama.ai"
Repository = "https://github.com/GitramaLLC/gitrama-mcp"
Documentation = "https://gitrama.ai/docs"
Issues = "https://github.com/GitramaLLC/gitrama-mcp/issues"
Changelog = "https://github.com/GitramaLLC/gitrama-mcp/releases"

[project.scripts]
gitrama-mcp = "gitrama_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gitrama_mcp"]
