[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitrama-mcp"
version = "1.3.0"
description = "MCP Server for Gitrama — AI-powered Git intelligence for your IDE"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Gitrama", email = "contact@gitrama.ai" },
]
keywords = ["mcp", "git", "ai", "commit", "gitrama", "cursor", "claude"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "gitrama>=1.3.0",
    "mcp[cli]>=1.0.0",
    "fastmcp>=0.1.0",
]

[project.urls]
Homepage = "https://gitrama.ai"
Repository = "https://github.com/GitramaLLC/gitrama-mcp"
Documentation = "https://gitrama.ai/docs"
Issues = "https://github.com/GitramaLLC/gitrama-mcp/issues"

[project.scripts]
gitrama-mcp = "gitrama_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gitrama_mcp"]
